style fix for like button not centered. added image upload for about page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -611,7 +611,7 @@ input[name='q']::placeholder {
 /* pad the top for smaller screens */
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 66px;
+        padding-top: 80px;
     }
 
     body {
